OPTDIRS =

if CONFIG_RTAI_XENOMAI_SKIN_PSOS
OPTDIRS += psos+
endif

if CONFIG_RTAI_XENOMAI_SKIN_VXWORKS
OPTDIRS += vxworks
endif

if CONFIG_RTAI_XENOMAI_SKIN_VRTX
OPTDIRS += vrtx
endif

if CONFIG_RTAI_XENOMAI_SKIN_UITRON
OPTDIRS += uITRON
endif

if CONFIG_RTAI_XENOMAI_SKIN_PSE51
OPTDIRS += pse51
endif

SUBDIRS = $(OPTDIRS)
