OPTDIRS =

if CONFIG_RTAI_MVM_SKIN_PSOS
OPTDIRS += psos+
endif

if CONFIG_RTAI_MVM_SKIN_VXWORKS
OPTDIRS += vxworks
endif

if CONFIG_RTAI_MVM_SKIN_VRTX
OPTDIRS += vrtx
endif

if CONFIG_RTAI_MVM_SKIN_UITRON
OPTDIRS += uITRON
endif

if CONFIG_RTAI_MVM_SKIN_PSE51
OPTDIRS += pse51
endif

if CONFIG_RTAI_MVM_SKIN_VRTAI
OPTDIRS += vrtai
endif

SUBDIRS = xenomai $(OPTDIRS)
